# PythonWEB_hw8

./: authors.json  main.py  main_1.py  models.py  pyproject.toml  qoutes.json  seed.py
Part2/: consumer.py  models.py  producer.py
Part2/dod/: consumer_sms.py  models.py  producer.py
