[tool.poetry]
name = "pythonweb-hw8"
version = "0.1.0"
description = ""
authors = ["basilegupov <basilegupov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mongoengine = "^0.28.2"
redis = "^5.0.4"
pika = "^1.3.2"
faker = "^24.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
